=======
HISTORY
=======

1.2.1 (unreleased)
------------------

- Handle Missing.Value for uid in JSONFolderListing.
  [elro]

- Set text/css content type on tinymce-getstyle.
  [elro]

- Add option 'auto' for directivity. The directivity will be set depending 
  on the content or the portals default language.
  Fixes http://dev.plone.org/plone/ticket/10039
  [csenger]

1.2.0 (2011-01-04)
------------------

- Always use an image's description as its caption, and make the image dialog
  edit the description field instead of the image's alt text. This provides
  parity with how captions were handled by kupu, and avoids misusing the alt
  text.
  [davisagli]

- When editing an image, correctly highlight it in the image dialog even if
  the link-by-uid setting changed since the image was added. This fixes
  http://dev.plone.org/plone/ticket/10970.
  [davisagli]

- Remove the resolveuid Python script; a browser view with the same name in
  plone.outputfilters is now used instead to resolve UUIDs.
  [davisagli]

- Deprecated various helpers in plone.outputfilters.setuphandlers since they
  now duplicate functions in plone.outputfilters.
  [davisagli]

- Use the resolveuid and captioning transforms from plone.outputfilters
  instead of implementing our own. See http://dev.plone.org/plone/ticket/9938
  for details.
  [davisagli]

1.1.7 (unreleased)
------------------

- Make sure that tinymce-jsonconfiguration is traversed as a view in
  tinymce_wysiwyg_support.pt.
  [davisagli]

1.1.6 (2011-01-04)
------------------

- Fix capitalization of the title of the content_css setting. This fixes
  http://dev.plone.org/plone/ticket/10792.
  [dariog, davisagli]

- Protect the control panel using the "Plone Site Setup: TinyMCE" permission,
  instead of the generic "Manage portal". Also, add the Site Administrator
  role to the default roles for this permission, for forward compatibility with
  Plone 4.1.
  [davisagli]
